tests/algorithms/x/Kotlin/data_structures/binary_tree/diff_views_of_binary_tree.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/binary_tree/diff_views_of_binary_tree.kt:10:66: error: type mismatch: inferred type is MutableList<Any?> but MutableList<Int> was expected
    return Tree(values = mutableListOf(3, 9, 20, 15, 7), lefts = mutableListOf<Any?>((1 as Any?), (NIL as Any?), (3 as Any?), (NIL as Any?), (NIL as Any?)), rights = mutableListOf<Any?>((2 as Any?), (NIL as Any?), (4 as Any?), (NIL as Any?), (NIL as Any?)), root = 0)
                                                                 ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/binary_tree/diff_views_of_binary_tree.kt:10:167: error: type mismatch: inferred type is MutableList<Any?> but MutableList<Int> was expected
    return Tree(values = mutableListOf(3, 9, 20, 15, 7), lefts = mutableListOf<Any?>((1 as Any?), (NIL as Any?), (3 as Any?), (NIL as Any?), (NIL as Any?)), rights = mutableListOf<Any?>((2 as Any?), (NIL as Any?), (4 as Any?), (NIL as Any?), (NIL as Any?)), root = 0)
                                                                                                                                                                      ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/binary_tree/diff_views_of_binary_tree.kt:49:62: error: type mismatch: inferred type is Int but BigInteger! was expected
            if (((t.lefts)[idx]!!).toBigInteger().compareTo((NIL)) != 0) {
                                                             ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/binary_tree/diff_views_of_binary_tree.kt:52:63: error: type mismatch: inferred type is Int but BigInteger! was expected
            if (((t.rights)[idx]!!).toBigInteger().compareTo((NIL)) != 0) {
                                                              ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/binary_tree/diff_views_of_binary_tree.kt:71:62: error: type mismatch: inferred type is Int but BigInteger! was expected
            if (((t.lefts)[idx]!!).toBigInteger().compareTo((NIL)) != 0) {
                                                             ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/binary_tree/diff_views_of_binary_tree.kt:74:63: error: type mismatch: inferred type is Int but BigInteger! was expected
            if (((t.rights)[idx]!!).toBigInteger().compareTo((NIL)) != 0) {
                                                              ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/binary_tree/diff_views_of_binary_tree.kt:95:59: error: type mismatch: inferred type is Int but BigInteger! was expected
        if ((index_of(hds, hd)).toBigInteger().compareTo((NIL)) == 0) {
                                                          ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/binary_tree/diff_views_of_binary_tree.kt:99:58: error: type mismatch: inferred type is Int but BigInteger! was expected
        if (((t.lefts)[idx]!!).toBigInteger().compareTo((NIL)) != 0) {
                                                         ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/binary_tree/diff_views_of_binary_tree.kt:103:59: error: type mismatch: inferred type is Int but BigInteger! was expected
        if (((t.rights)[idx]!!).toBigInteger().compareTo((NIL)) != 0) {
                                                          ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/binary_tree/diff_views_of_binary_tree.kt:123:45: error: type mismatch: inferred type is Int but BigInteger! was expected
        if ((pos).toBigInteger().compareTo((NIL)) == 0) {
                                            ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/binary_tree/diff_views_of_binary_tree.kt:129:58: error: type mismatch: inferred type is Int but BigInteger! was expected
        if (((t.lefts)[idx]!!).toBigInteger().compareTo((NIL)) != 0) {
                                                         ^
/workspace/mochi/tests/algorithms/x/Kotlin/data_structures/binary_tree/diff_views_of_binary_tree.kt:133:59: error: type mismatch: inferred type is Int but BigInteger! was expected
        if (((t.rights)[idx]!!).toBigInteger().compareTo((NIL)) != 0) {
                                                          ^
